# NocturneAI

./: .env.example  .env.template  .gitignore  AGENT_COMMUNICATION_SYSTEM.md  Cargo.toml  LICENSE  LLM_SETUP.md  README.md  colored_logging.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  run_examples.py  sample.env  tsconfig.json  tsup.config.ts
backend/: Dockerfile  README.md  requirements.txt  start.sh  test_simple.py
backend/app/: load_balancer.py  main.py
config/: agent_config.yaml  model-settings.json  models.json
crates/agent-framework/: Cargo.toml
crates/cognitive-services/: Cargo.toml
crates/cognitive-services/src/: decision_engine.rs  langraph.rs  lib.rs  reasoning.rs
crates/intelligence-core/: Cargo.toml
crates/intelligence-core/src/: backend_api.rs  main.rs  systems.rs
crates/intelligence-core/src/game/: agents.rs  animations.rs  interactions.rs  mod.rs  visualizations.rs  world.rs
crates/intelligence-core/src/ui/: mod.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/social-engine/: Cargo.toml
crates/social-engine/src/: lib.rs  network_analyzer.rs  relationship_manager.rs  social_learning.rs
docs/: ABILITY_SYSTEM.md  CLEAN_ARCHITECTURE.md  DISTRIBUTED_ROUTING_PLAN.md  INTEGRATION_COMPLETE.md  INTERACTION_MODE_DESIGN.md  LIVING_AGENT_ARCHITECTURE.md  README.md  agent-personalities.md  architecture-overview.md  capabilities.md  implementation-roadmap.md  plan.md  rough_plan.md  technical-specifications.md
docs/diagrams/: README.md  main-architecture.md  phase1-architecture.md  phase2-architecture.md  technology-evolution.md
examples/: README.md  advanced_agent_system.py  advanced_workflow.py  basic_workflow.py  code_agent_example.py  collaborative_workflow.py  config_example.py  dashboard_example.py  direct_agent_test.py  fixed_ollama_provider.py  grid_problem_test.py  intelligent_workflow.py  modular_workflow.py  multi_capability_agent.py  ollama_direct_test.py  reasoning_collaboration.py  simple_ollama_test.py  simple_reasoning.py  specialized_workflow.py  stream_test.py
examples/mcp_example/: edit_file_demo.py  git_mcp_demo.py  mcp_basic_demo.py  websearch_demo.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
playground/: code_agent.py  run_task.py
playground/tasks/: weather_task.txt
src/: app.html  cli.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/advanced/: README.md  index.ts
src/agents/: __init__.py  advanced_agent.py  collaborative_agent.py  coordinator.py  expertise.py  intelligent_agent.py  planner.py  reasoning.py
src/collaboration/: __init__.py  conflict.py  knowledge.py  protocol.py  tasks.py
src/config/: __init__.py  manager.py
src/core/: __init__.py  agent.py  config.py  llm.py  memory.py  tools.py  workflow.py
src/lib/: AbilitySystemBridge.ts
src/llm/: __init__.py  provider.py
src/mcp/: __init__.py  base.py  registry.py
src/presentation/: README.md
src/routes/: +layout.ts  +page.svelte
src/tools/: __init__.py  base.py  ollama_test.py  web_search.py
src/workflows/: __init__.py  base.py  composite.py  monitoring.py  (+3 more)
tests/: conftest.py
(+444 files in other folders)
