[workspace]
members = [
    "crates/intelligence-core",
    "crates/cognitive-services", 
    "crates/agent-framework",
    "crates/social-engine",
    "crates/shared-types"
]
resolver = "2"

[workspace.dependencies]
# Core Bevy Engine
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_egui = "0.23"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI & Python Integration
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = "0.20"

# Data Structures
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
petgraph = "0.6"

# Performance
rayon = "1.7"
dashmap = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 