[package]
name = "cognitive-services"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] } 