[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[features]
default = [] 